bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: ')' expected but '<-' found.
  return (temp1-temp2>100) || (temp1-temp2<-100)
                                          ^