bat.bool1.icyhot.IcyHot.scala.code
def icyHot(temp1:Int, temp2: Int): Boolean = {
  return (temp1-temp2>100) || (temp1-temp2<-100)
}